kubernetes/apps/storage/rook-ceph/rook-ceph/app_old/http-route.yaml
# kind: Deployment
# apiVersion: apps/v1
# metadata:
#   name: whoami2
#   namespace: whoami
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: whoami2
#   template:
#     metadata:
#       labels:
#         app: whoami2
#     spec:
#       containers:
#         - name: whoami2
#           image: traefik/whoami
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: whoami2
#   namespace: whoami
#   labels:
#     app: whoami2
#     service-type: ingress
# spec:
#   type: LoadBalancer
#   ports:
#     - port: 80
#       name: whoami2
#   selector:
#     app: whoami2
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard-httproute
  namespace: whoami
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
  hostnames:
    - rook-ceph.icylair.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard  
          namespace: storage
          port: 7000
---
# Allow HTTPRoute in whoami namespace to reference Gateway and Service in network namespace
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-rook-routes
  namespace: network  # ReferenceGrant must be in the namespace being referenced
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: storage  # Source namespace containing the HTTPRoute
  to:
    # Allow references to Gateway resources
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway  # Specific Gateway name that can be referenced
    # Allow references to Service resources
    - group: ""  # Core API group
      kind: Service
      name: rook-ceph-mgr-dashboard # Specific Service name that can be referenced
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: whoami-tls-httproute
#   namespace: network
# spec:
#   parentRefs:
#     - name: wildcard-tls-gateway
#       namespace: network
#   hostnames:
#     - whoami.icylair.com
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#       backendRefs:
#         - name: whoami
#           namespace: network
#           port: 80
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: wildcard-tls-gateway
#   namespace: network
# spec:
#   gatewayClassName: traefik
#   listeners:
#   # - name: foo-https
#   #   protocol: HTTPS
#   #   port: 8443
#   #   hostname: test.icylair.com
#   #   tls:
#   #     certificateRefs:
#   #     - kind: Secret
#   #       group: ""
#   #       name: icylair-com-all-prod
#   - name: wildcard-https
#     protocol: HTTPS
#     port: 8443
#     hostname: "*.icylair.com"
#     tls:
#       certificateRefs:
#       - kind: Secret
#         # group: ""
#         name: icylair-com-all-prod
